sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:10: error: not found: value permute2
    permute2 = false
    ^